--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
   - docker-compose exec web php bin/console doctrine:schema:update --force
   - docker-compose exec web php bin/console hautelook:fixtures:load -q --purge-with-truncate
 
-script:
+script: "rake"
   - docker-compose exec web php bin/phpunit
