--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 sudo: required
 services: - docker
-
+language: php
+php:
+  - '7.0'
+  - '7.1'
+  - nightly
+install:
+  - composer install --dev
 before_install:
-  - gem install bundler
   - cp .env.test.dist .env
   - docker-compose up -d
   - docker-compose exec web composer install --no-interaction
   - docker-compose exec web php bin/console doctrine:schema:update --force
   - docker-compose exec web php bin/console hautelook:fixtures:load -q --purge-with-truncate
-
-script: "rake"
-  - docker-compose exec web php bin/phpunit
+script:
+  - ./vendor/bin/behat
+  - ./vendor/bin/phpspec run
+  - ./vendor/bin/phpunit
